# appdaemon-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/configs/: claude_desktop_config.json  cursor_config.md
src/appdaemon_mcp/: __init__.py  client.py  models.py  server.py
src/appdaemon_mcp/tools/: apps.py  core.py  services.py
tests/: test_client.py  test_client_refactored.py  test_models.py  test_server.py  test_tools_app_mgmt.py  test_tools_core.py  test_tools_services.py
