[project]
name = "appdaemon-mcp"
version = "0.1.0"
description = "MCP server for managing AppDaemon automations via REST API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AppDaemon MCP" }]
keywords = ["homeassistant", "appdaemon", "mcp", "automation"]

dependencies = [
    "mcp[cli]>=1.4.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "tenacity>=9.1.4",
]

[project.scripts]
appdaemon-mcp = "appdaemon_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aioresponses>=0.7.6",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
    "commitizen>=3.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/appdaemon_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.semantic_release]
version_variable = ["src/appdaemon_mcp/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "uv build"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog.sections]
feature = "Features"
fix = "Bug Fixes"
perf = "Performance Improvements"
refactor = "Refactoring"
docs = "Documentation"
style = "Styles"
test = "Tests"
chore = "Maintenance"

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
    "commitizen>=3.20.0",
    "python-semantic-release>=10.5.3",
]
